--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,3 +2,17 @@ body {
     background-image: url(../images/istockphoto-519828718-612x612.jpg);
     background-size: cover;
 }
+
+div {
+    text-align: center;
+}
+
+h1 {
+    font-size: 50px;
+}
+
+p {
+    font-size: 30px;
+}
+
+
